# cmake-ninja-project

./: CMakeLists.txt  README.md  cnpConfig.h.in  main.cpp
adder/: CMakeLists.txt
